04 fix scroll when too much pages

--- a/frontend/src/components/search/wiki2-search.css
+++ b/frontend/src/components/search/wiki2-search.css
@@ -1,5 +1,5 @@
 .wiki2-search {
-  margin: 10px 8px;
+  margin: 10px 8px 0px;
   height: 32px;
   display: flex;
   align-items: center;
