--- a/frontend/src/pages/wiki2/side-panel.css
+++ b/frontend/src/pages/wiki2/side-panel.css
@@ -55,7 +55,7 @@
   flex: 1;
   overflow: hidden;
   padding: 8px;
-  padding-top: 10px;
+  padding-top: 20px;
 }
 
 .wiki2-side-panel .wiki2-side-nav .wiki2-pages-container:hover {
